--- a/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -23,9 +23,10 @@ LastExecutedLaunchDevice=WindowsNoEditor@HURRAY-POOTA
 LastExecutedLaunchName=HURRAY-POOTA
 
 [MRU]
-MRUItem0=C:/Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem1=C:/Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/Spook/Spook_World.umap
-MRUItem2=C:/Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/ThirdPersonBP/Maps/ThirdPersonExampleMap.umap
+MRUItem0=C:/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem1=C:/Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem2=C:/Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/Spook/Spook_World.umap
+MRUItem3=C:/Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/ThirdPersonBP/Maps/ThirdPersonExampleMap.umap
 
 [/Script/UnrealEd.FbxImportUI]
 bUseDefaultSampleRate=False
@@ -68,7 +69,8 @@ ContentBrowserTab1.SelectedPaths=/Game/Spook/Environment/Trees
 LastLevel=/Game/Spook/MapAndGameMode/Spook_World
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Spook/Environment/Fences/lambert1.lambert1
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -246,6 +248,7 @@ MaterialExpressionTextureSampleParameter2D.General=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+K2Node_InputAction.Input=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Spook/Environment/Fences/BreakableFence1.BreakableFence1;
@@ -289,6 +292,7 @@ LastLogListing=FBXImport
 /Game/Spook/Environment/Fences/lambert1.lambert1=1
 /Game/Spook/Environment/Trees/LowPolyDeadTree.LowPolyDeadTree=1
 /Game/Spook/Environment/Trees/LowPolyLiveTree.LowPolyLiveTree=1
+/Game/Spook/MapAndGameMode/SpookGameMode.SpookGameMode=1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -318,7 +322,7 @@ CameraSpeed=5
 
 [RootWindow]
 ScreenPosition=X=43.000 Y=4.000
-WindowSize=X=1310.000 Y=728.000
+WindowSize=X=1320.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -332,7 +336,7 @@ FourPanes2x2.Viewport 1.bIsImmersive=False
 FourPanes2x2.Viewport 1.MaximizedViewportID=1
 
 [Directories2]
-UNR=../../../../../../Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/Spook/MapAndGameMode
+UNR=../../../../../../SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode
 BRUSH=../../../../../../Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/
 FBX=../../../../../../Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/
 FBXAnim=../../../../../../Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content/
