--- a/Spook_Prototype/Saved/Config/Windows/Engine.ini
+++ b/Spook_Prototype/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/Jackson/Documents/Unreal Projects/Spook_Prototype/Content
+Paths=../../../../../../SourceTree/Spook/Spook_Prototype/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
@@ -22,5 +22,13 @@ SDKPath=(Path=)
 NDKPath=(Path=)
 ANTPath=(Path=)
 JavaPath=(Path=)
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
