saved map - removed backups (there's a lot and it's cluggy)

--- a/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -63,14 +63,13 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.230000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Spook/Environment/Trees
+ContentBrowserTab1.SelectedPaths=/Game/Spook/Environment/Fences
 
 [EditorStartup]
 LastLevel=/Game/Spook/MapAndGameMode/Spook_World
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Spook/Environment/Fences/lambert1.lambert1
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -322,7 +321,7 @@ CameraSpeed=5
 
 [RootWindow]
 ScreenPosition=X=43.000 Y=4.000
-WindowSize=X=1320.000 Y=728.000
+WindowSize=X=1330.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
