--- a/Spook_Prototype/Saved/Config/Windows/Engine.ini
+++ b/Spook_Prototype/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content
+Paths=../../../../../../Source Tree/Spook/Spook_Prototype/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
@@ -19,5 +19,13 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
