Added in test blends for King (Frank) and Boar.
Added in gliding functionality

Added in sheep model

--- a/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -84,7 +84,7 @@ NormalImportMethod=FBXNIM_ComputeNormals
 bInvertNormalMaps=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Test/Tree
+ContentBrowserTab1.SelectedPaths=/Game/TESTEST
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1064,7 +1064,7 @@ REINST_SheepController_C_585.Input=True
 REINST_SheepController_C_585.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.FbxAnimSequenceImportData]
 bImportCustomAttribute=True
@@ -1145,7 +1145,7 @@ RecentlyPlaced=/Game/Spook/Characters/Sheep/SheepController.SheepController;
 
 [RootWindow]
 ScreenPosition=X=2.000 Y=69.000
-WindowSize=X=1320.000 Y=760.000
+WindowSize=X=1330.000 Y=770.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
