--- a/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,LpvLightingOnly=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,ForceGBuffer=0,VisualizeSenses=1,VisualizeBloom=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,LpvLightingOnly=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,ForceGBuffer=0,VisualizeSenses=1,VisualizeBloom=0",BufferVisualizationMode=,ExposureSettings=(LogOffset=999,bFixed=False),FOVAngle=90.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=))
 
 [MRU]
-MRUItem0=C:/Source Tree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem1=C:/Source Tree/Spook/Spook_Prototype 4.8/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem0=C:/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem1=C:/Source Tree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem2=C:/Source Tree/Spook/Spook_Prototype 4.8/Content/Spook/MapAndGameMode/Spook_World.umap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -65,7 +66,6 @@ DefaultLocalAxesSelection=2
 [/Script/UnrealEd.FbxImportUI]
 bImportMaterials=False
 bImportTextures=False
-bImportAnimations=True
 bUseDefaultSampleRate=False
 
 [/Script/UnrealEd.FbxStaticMeshImportData]
@@ -84,7 +84,7 @@ NormalImportMethod=FBXNIM_ComputeNormals
 bInvertNormalMaps=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TESTEST
+ContentBrowserTab1.SelectedPaths=/Game/Spook/Characters/Sheep
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -116,7 +116,7 @@ WorldSettings.PrecomputedVisibility=True
 WorldSettings.Audio=True
 WorldSettings.VR=True
 FbxImportUI.Mesh=True
-FbxImportUI.Animation=True
+FbxImportUI.Animation=False
 FbxImportUI.Transform=True
 FbxImportUI.Material=True
 PreviewMaterial.PhysicalMaterial=True
@@ -1062,6 +1062,39 @@ REINST_SheepController_C_585.Camera=True
 REINST_SheepController_C_585.Pawn=True
 REINST_SheepController_C_585.Input=True
 REINST_SheepController_C_585.Actor=True
+Blueprint.BlueprintOptions=True
+Blueprint.ClassOptions=True
+Blueprint.Thumbnail=True
+K2Node_InputAxisEvent.Input=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Input=True
+Actor.Actor=True
+BP_Soul_C.TransformCommon=True
+BP_Soul_C.StaticMesh=True
+BP_Soul_C.Materials=True
+BP_Soul_C.Physics=True
+BP_Soul_C.Collision=True
+BP_Soul_C.Lighting=True
+BP_Soul_C.Rendering=True
+BP_Soul_C.Tags=True
+BP_Soul_C.Input=True
+BP_Soul_C.Actor=True
+BP_Soul_C.Tick=True
+BP_Soul_C.Replication=True
+BP_Soul_C.Variable=True
+BP_Soul_C.Sockets=True
+BP_Soul_C.Events=True
+REINST_BP_Soul_C_145.TransformCommon=True
+REINST_BP_Soul_C_145.StaticMesh=True
+REINST_BP_Soul_C_145.Materials=True
+REINST_BP_Soul_C_145.Physics=True
+REINST_BP_Soul_C_145.Collision=True
+REINST_BP_Soul_C_145.Lighting=True
+REINST_BP_Soul_C_145.Rendering=True
+REINST_BP_Soul_C_145.Tags=True
+REINST_BP_Soul_C_145.Input=True
+REINST_BP_Soul_C_145.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1125,12 +1158,18 @@ PlayerStart.Actor=True
 /Game/TESTEST/King_Model_Animation_02__2__Skeleton.King_Model_Animation_02__2__Skeleton=1
 /Game/TESTEST/King_Model_Animation_02__2_.King_Model_Animation_02__2_=1
 /Game/TESTEST/BS_King.BS_King=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/Spook/MiscObjects/Soul.Soul=1
+/Game/Spook/MiscObjects/BP_Soul.BP_Soul=1
 
 [MaterialEditor]
 LightDir=P=-39.999996 Y=27.499994 R=0.000000
 PrimType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Spook/MiscObjects/BP_Soul.BP_Soul;
+RecentlyPlaced=/Game/Spook/MiscObjects/Soul.Soul;
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Test/King/TEST_FrankController.TEST_FrankController;
 RecentlyPlaced=/Script/Engine.TriggerSphere;/Engine/Transient.ActorFactoryTriggerSphere_0
@@ -1144,8 +1183,8 @@ RecentlyPlaced=/Game/Spook/Characters/Frank/FrankController.FrankController;
 RecentlyPlaced=/Game/Spook/Characters/Sheep/SheepController.SheepController;
 
 [RootWindow]
-ScreenPosition=X=2.000 Y=69.000
-WindowSize=X=1330.000 Y=770.000
+ScreenPosition=X=2.000 Y=0.000
+WindowSize=X=1350.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1159,7 +1198,7 @@ FourPanes2x2.Viewport 1.bIsImmersive=False
 FourPanes2x2.Viewport 1.MaximizedViewportID=1
 
 [Directories2]
-UNR=../../../../../../Source Tree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode
+UNR=../../../../../../SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode
 BRUSH=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
 FBX=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
 FBXAnim=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
@@ -1568,12 +1607,12 @@ Object=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-InputSettings="Object.Bindings.ActionMappings.ActionMappings[2]" 
-SheepController_C="Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
-Character="Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
-Pawn="Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
-REINST_SheepController_C_553="Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
-REINST_SheepController_C_585="Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+InputSettings=Object.Bindings.ActionMappings.ActionMappings[2]
+SheepController_C=
+Character=
+Pawn=
+REINST_SheepController_C_553=Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
+REINST_SheepController_C_585=Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
