--- a/Spook_Prototype/Saved/Config/Windows/Engine.ini
+++ b/Spook_Prototype/Saved/Config/Windows/Engine.ini
@@ -1,10 +1,3 @@
-[Core.System]
-Paths=../../../Engine/Content
-Paths=../../../../../../SourceTree/Spook/Spook_Prototype/Content
-Paths=../../../Engine/Plugins/2D/Paper2D/Content
-Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
-Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
-
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path=)
 NDKPath=(Path=)
@@ -19,5 +12,15 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+
+[Core.System]
+Paths=../../../Engine/Content
+Paths=../../../../../../../Users/jackson.luff/SourceTree/Spook/Spook_Prototype/Content
+Paths=../../../Engine/Plugins/2D/Paper2D/Content
+Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
+Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
+
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
 
 
