Cleaned up vert painting - Lighting looks a bit bright but that could be my overly bright monitor
Cleaned up a bunch of 1KB files left over from UE4 not cleaning up correctly >.>

--- a/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,LpvLightingOnly=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,ForceGBuffer=0,VisualizeSenses=1,VisualizeBloom=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,LpvLightingOnly=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,ForceGBuffer=0,VisualizeSenses=1,VisualizeBloom=0",BufferVisualizationMode=,ExposureSettings=(LogOffset=999,bFixed=False),FOVAngle=90.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=))
 
 [MRU]
-MRUItem0=C:/Users/jackson.luff/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem1=C:/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem0=C:/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem1=C:/Users/jackson.luff/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
 MRUItem2=C:/Source Tree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
 MRUItem3=C:/Source Tree/Spook/Spook_Prototype 4.8/Content/Spook/MapAndGameMode/Spook_World.umap
 
@@ -86,7 +86,7 @@ NormalImportMethod=FBXNIM_ComputeNormals
 bInvertNormalMaps=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Spook/Environment/Materials
+ContentBrowserTab1.SelectedPaths=/Game/FoliageTest/Grass
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -103,7 +103,7 @@ ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
-ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.ThumbnailSizeScale=0.230000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
@@ -316,12 +316,12 @@ SheepController_C.Velocity=True
 SheepController_C.PlanarMovement=True
 StaticMesh.LOD0=True
 StaticMesh.LodSettings=False
-StaticMesh.StaticMesh=True
-StaticMesh.ImportSettings=True
-StaticMesh.Transform=True
-StaticMesh.Thumbnail=True
-StaticMesh.Collision=True
-StaticMesh.Navigation=True
+StaticMesh.StaticMesh=False
+StaticMesh.ImportSettings=False
+StaticMesh.Transform=False
+StaticMesh.Thumbnail=False
+StaticMesh.Collision=False
+StaticMesh.Navigation=False
 PhATSimOptions.Anim=True
 PhATSimOptions.Simulation=True
 PhATSimOptions.MouseSpring=True
@@ -1245,14 +1245,44 @@ Brush.Surface Materials=True
 Brush.Geometry=True
 Brush.Surface Properties=True
 GeomModifier_Clip.Settings=True
+MaterialExpressionSpriteTextureSampler.Paper2D=True
+MaterialExpressionSpriteTextureSampler.General=True
+MaterialExpressionSpriteTextureSampler.MaterialExpressionTextureSample=True
+MaterialExpressionSpriteTextureSampler.MaterialExpressionTextureBase=True
+MaterialExpressionSpriteTextureSampler.MaterialExpression=True
+REINST_SheepController_C_194.TransformCommon=True
+REINST_SheepController_C_194.Animation=True
+REINST_SheepController_C_194.Mesh=True
+REINST_SheepController_C_194.Materials=True
+REINST_SheepController_C_194.Clothing=True
+REINST_SheepController_C_194.Physics=True
+REINST_SheepController_C_194.Collision=True
+REINST_SheepController_C_194.Lighting=True
+REINST_SheepController_C_194.Rendering=True
+REINST_SheepController_C_194.Tags=True
+REINST_SheepController_C_194.Activation=True
+REINST_SheepController_C_194.Character Movement (General Settings)=True
+REINST_SheepController_C_194.Character Movement: Walking=True
+REINST_SheepController_C_194.Character Movement: Jumping / Falling=True
+REINST_SheepController_C_194.Character Movement: Swimming=True
+REINST_SheepController_C_194.Character Movement: Flying=True
+REINST_SheepController_C_194.Character Movement: Custom Movement=True
+REINST_SheepController_C_194.Character Movement: Physics Interaction=True
+REINST_SheepController_C_194.Character Movement: Avoidance=True
+REINST_SheepController_C_194.Character Movement: NavMesh Movement=True
+REINST_SheepController_C_194.Movement Capabilities=True
+REINST_SheepController_C_194.MovementComponent=True
+REINST_SheepController_C_194.Velocity=True
+REINST_SheepController_C_194.Shape=True
+REINST_SheepController_C_194.Navigation=True
+REINST_SheepController_C_194.Character=True
+REINST_SheepController_C_194.Camera=True
+REINST_SheepController_C_194.Pawn=True
+REINST_SheepController_C_194.Input=True
+REINST_SheepController_C_194.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FoliageTest/floor_10x10.floor_10x10
-OpenAssetsAtExit=/Game/FoliageTest/Grass_Tuff.grass_tuff
-OpenAssetsAtExit=/Game/FoliageTest/Mat_Tuff.Mat_Tuff
-OpenAssetsAtExit=/Game/Spook/Environment/Materials/Mat_OpenEnviro.Mat_OpenEnviro
-OpenAssetsAtExit=/Game/Spook/Environment/Materials/Mat_Walls.Mat_Walls
 
 [/Script/UnrealEd.FbxAnimSequenceImportData]
 bImportCustomAttribute=True
@@ -1325,12 +1355,26 @@ FoliageType_InstancedStaticMesh.Placement=True
 /Game/FoliageTest/Gass_Tuff.Gass_Tuff=1
 /Game/FoliageTest/Fol_Tuff.Fol_Tuff=1
 /Game/FoliageTest/Mat_Tuff.Mat_Tuff=1
+/Game/FoliageTest/BranchTest.BranchTest=1
+/Game/FoliageTest/Branch/Resource/Leaf01.Leaf01=1
+/Game/FoliageTest/Branch/Resource/Leaf02.Leaf02=1
+/Game/FoliageTest/Branch/Resource/Leaf03.Leaf03=1
+/Game/FoliageTest/Branch/Resource/Stem01.Stem01=1
+/Engine/EngineMaterials/WorldGridMaterial.WorldGridMaterial=1
+/Game/FoliageTest/Branch/Resource/Stem02.Stem02=1
+/Game/FoliageTest/Branch/BranchTest.BranchTest=1
+/Game/FoliageTest/Branch/Tree_Branch.Tree_Branch=1
+/Game/FoliageTest/Branch/Fol_Branch.Fol_Branch=1
+/Game/FoliageTest/Grass/Mat_Tuff.Mat_Tuff=1
 
 [MaterialEditor]
 LightDir=P=-39.999996 Y=27.499994 R=0.000000
 PrimType=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerSphere;/Engine/Transient.ActorFactoryTriggerSphere_0
+RecentlyPlaced=/Game/FoliageTest/Branch/Tree_Branch.Tree_Branch;
+RecentlyPlaced=/Game/FoliageTest/Branch/BranchTest.BranchTest;
 RecentlyPlaced=/Game/Spook/Environment/Trees/LowPolyDeadTree.LowPolyDeadTree;
 RecentlyPlaced=/Game/FoliageTest/floor_10x10.floor_10x10;
 RecentlyPlaced=/Game/Spook/Environment/Platforms/WallPlatform.WallPlatform;
@@ -1340,7 +1384,7 @@ RecentlyPlaced=/Game/Spook/Environment/Platforms/SmallPlatform.SmallPlatform;
 RecentlyPlaced=/Game/Spook/Environment/Rocks/LowPolyRock1.LowPolyRock1;
 RecentlyPlaced=/Game/Spook/Environment/Rocks/LowPolyRock2.LowPolyRock2;
 RecentlyPlaced=/Game/Spook/Environment/Fences/BreakableFence1.BreakableFence1;
-RecentlyPlaced=/Game/FoliageTest/Grass_Tuff.Grass_Tuff;
+RecentlyPlaced=/Game/FoliageTest/Grass/grass_tuff.grass_tuff;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/PossessionVisuals/Mat_TriggerVisual.Mat_TriggerVisual;
 RecentlyPlaced=/Game/Spook/MiscObjects/BP_Soul.BP_Soul;
@@ -1348,14 +1392,11 @@ RecentlyPlaced=/Game/Spook/MiscObjects/Soul.Soul;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Test/King/TEST_FrankController.TEST_FrankController;
-RecentlyPlaced=/Script/Engine.TriggerSphere;/Engine/Transient.ActorFactoryTriggerSphere_0
-RecentlyPlaced=/Game/King_Test02/King_Model_Animation.King_Model_Animation;
-RecentlyPlaced=/Game/Test/Boar/TEST_BoarController.TEST_BoarController;
 
 [RootWindow]
-ScreenPosition=X=2662.000 Y=196.000
-WindowSize=X=1360.000 Y=738.000
-InitiallyMaximized=True
+ScreenPosition=X=-81.000 Y=75.000
+WindowSize=X=1366.000 Y=728.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1368,7 +1409,7 @@ FourPanes2x2.Viewport 1.bIsImmersive=False
 FourPanes2x2.Viewport 1.MaximizedViewportID=1
 
 [Directories2]
-UNR=../../../../../../../Users/jackson.luff/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode
+UNR=../../../../../../SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode
 BRUSH=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
 FBX=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
 FBXAnim=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
@@ -1772,6 +1813,8 @@ ExternalImagePicker.TimeStamp=2015.08.05-23.58.13
 ExternalImagePicker.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2015.08.04-00.59.10
 TextureEditor.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2015.08.05-12.11.35
+SynthBenchmark.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 SkeletalMesh=
@@ -1779,20 +1822,20 @@ Object=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-InputSettings="Object.Bindings.ActionMappings.ActionMappings[2]" "Object.Bindings.ActionMappings.ActionMappings[4]" "Object.Bindings.ActionMappings.ActionMappings[5]" "Object.Bindings.ActionMappings.ActionMappings[6]" "Object.Bindings.ActionMappings.ActionMappings[7]" "Object.Bindings.ActionMappings.ActionMappings[8]" 
+InputSettings=Object.Bindings.ActionMappings.ActionMappings[2]" "Object.Bindings.ActionMappings.ActionMappings[4]" "Object.Bindings.ActionMappings.ActionMappings[5]" "Object.Bindings.ActionMappings.ActionMappings[6]" "Object.Bindings.ActionMappings.ActionMappings[7]" "Object.Bindings.ActionMappings.ActionMappings[8]
 SheepController_C=
 Character=
 Pawn=
 REINST_SheepController_C_553=Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 REINST_SheepController_C_585=Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 MaterialBillboardComponent="Object.Elements" "Object.Elements.Elements[0]" 
-PrimitiveComponent="Object.Elements" "Object.Elements.Elements[0]" 
-SceneComponent="Object.Elements" "Object.Elements.Elements[0]" 
-ActorComponent="Object.Elements" "Object.Elements.Elements[0]" 
-Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
-GeomModifier_Clip="Object.Settings" 
-GeomModifier_Edit="Object.Settings" 
-GeomModifier="Object.Settings" 
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+GeomModifier_Clip=Object.Settings
+GeomModifier_Edit=Object.Settings
+GeomModifier=Object.Settings
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
@@ -1821,11 +1864,13 @@ OnlyBuildVisibility=False
 
 [FoliageEdit]
 Radius=167.229980
-PaintDensity=0.910000
+PaintDensity=2.000000
 WindowPosition=-1,-1,284,400
 bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
+bFilterLandscape=False
+bFilterBSP=False
 
 
