--- a/Spook_Prototype/Saved/Config/Windows/Engine.ini
+++ b/Spook_Prototype/Saved/Config/Windows/Engine.ini
@@ -15,7 +15,7 @@ TunnelMulticastEndpoint=
 
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../../Users/jackson.luff/SourceTree/Spook/Spook_Prototype/Content
+Paths=../../../../../../SourceTree/Spook/Spook_Prototype/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
