--- a/Spook_Prototype/Saved/Config/Windows/Engine.ini
+++ b/Spook_Prototype/Saved/Config/Windows/Engine.ini
@@ -18,7 +18,7 @@ FlipNormalMapGreenChannel=False
 
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/jackson.luff/Desktop/Spook_Prototype/Spook_Prototype/Content
+Paths=../../../../../../Source Tree/Spook/Spook_Prototype/Spook_Prototype/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
