Nelson's stuff in. Need to work with things

--- a/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2181,10 +2181,10 @@ REINST_BoarController_C_850.PlanarMovement=True
 REINST_BoarController_C_850.Tags=True
 REINST_BoarController_C_850.Activation=True
 REINST_BoarController_C_850.Variable=True
+Pickup_C.TransformCommon=True
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Spook/Characters/Boar/BoarController.BoarController
 
 [/Script/UnrealEd.FbxAnimSequenceImportData]
 bImportCustomAttribute=True
@@ -2332,6 +2332,7 @@ LightDir=P=-39.999996 Y=27.499994 R=0.000000
 PrimType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Spook/MiscObjects/Pickup.Pickup;
 RecentlyPlaced=/Game/Spook/Characters/Frank/FrankController.FrankController;
 RecentlyPlaced=/Game/Spook/Characters/Boar/BoarController.BoarController;
 RecentlyPlaced=/Game/Test/Particles/BP_SoulPickUp.BP_SoulPickUp;
@@ -2351,11 +2352,10 @@ RecentlyPlaced=/Game/Spook/Environment/Rocks/LowPolyRock2.LowPolyRock2;
 RecentlyPlaced=/Game/Spook/Environment/Fences/BreakableFence1.BreakableFence1;
 RecentlyPlaced=/Game/FoliageTest/Grass/grass_tuff.grass_tuff;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Spook/MiscObjects/Mat_TriggerVisual.Mat_TriggerVisual;
 
 [RootWindow]
-ScreenPosition=X=453.000 Y=49.000
-WindowSize=X=1516.000 Y=878.000
+ScreenPosition=X=2133.000 Y=51.000
+WindowSize=X=1546.000 Y=908.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2781,17 +2781,21 @@ PackageDependencyInfo.TimeStamp=2015.08.06-00.01.02
 PackageDependencyInfo.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2015.08.06-00.02.24
 SequencerWidgets.LastCompileMethod=Unknown
+Cascade.TimeStamp=2015.08.05-23.56.21
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2015.08.05-23.57.19
+DistCurveEditor.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 SkeletalMesh=
-Object="Object.Bindings.ActionMappings.ActionMappings[9]" 
+Object=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-InputSettings="Object.Bindings.ActionMappings.ActionMappings[9]" 
+InputSettings=Object.Bindings.ActionMappings.ActionMappings[9]
 SheepController_C=
-Character="Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" 
-Pawn="Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" 
+Character=
+Pawn=
 REINST_SheepController_C_553=Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 REINST_SheepController_C_585=Object.Character.Mesh.Object.SkeletalMesh.WireframeColor" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride" "Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Shape.ShapeColor" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 MaterialBillboardComponent=Object.Elements" "Object.Elements.Elements[0]
@@ -2808,30 +2812,30 @@ ParticleModuleVelocityBase=Object.Velocity.StartVelocity" "Object.Velocity.Start
 ParticleModule=Object.Collision.Resilience.Distribution" "Object.Collision.ResilienceScaleOverLife.Distribution
 ParticleModuleCollisionGPU=Object.Collision.Resilience.Distribution" "Object.Collision.ResilienceScaleOverLife.Distribution
 ParticleModuleCollisionBase=Object.Collision.Resilience.Distribution" "Object.Collision.ResilienceScaleOverLife.Distribution
-AnimStateTransitionNode="Object.Events.TransitionInterrupt" 
-AnimStateNodeBase="Object.Events.TransitionInterrupt" 
+AnimStateTransitionNode=Object.Events.TransitionInterrupt
+AnimStateNodeBase=Object.Events.TransitionInterrupt
 EdGraphNode=
-AnimGraphNode_StateResult="Object.Settings.Node" 
-AnimGraphNode_Root="Object.Settings.Node" 
-AnimGraphNode_Base="Object.Settings.Node" 
+AnimGraphNode_StateResult=Object.Settings.Node
+AnimGraphNode_Root=Object.Settings.Node
+AnimGraphNode_Base=Object.Settings.Node
 K2Node=
-AnimGraphNode_SequencePlayer="Object.Settings.Node" 
-AnimGraphNode_BlendSpacePlayer="Object.Settings.Node" 
-AnimGraphNode_BlendSpaceBase="Object.Settings.Node" 
-AnimGraphNode_BlendListByBool="Object.Settings.Node" 
-AnimGraphNode_BlendListBase="Object.Settings.Node" 
+AnimGraphNode_SequencePlayer=Object.Settings.Node
+AnimGraphNode_BlendSpacePlayer=Object.Settings.Node
+AnimGraphNode_BlendSpaceBase=Object.Settings.Node
+AnimGraphNode_BlendListByBool=Object.Settings.Node
+AnimGraphNode_BlendListBase=Object.Settings.Node
 FrankController_C=
 REINST_FrankController_C_113=Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps
 REINST_FrankController_C_121=Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps
-AnimGraphNode_StateMachine="Object.Settings.Node" 
-AnimGraphNode_StateMachineBase="Object.Settings.Node" 
+AnimGraphNode_StateMachine=Object.Settings.Node
+AnimGraphNode_StateMachineBase=Object.Settings.Node
 AnimGraphNode_BlendListByInt=Object.Settings.Node
-AnimGraphNode_TransitionResult="Object.Settings.Node" 
-Image="Object.Appearance.Brush" 
+AnimGraphNode_TransitionResult=Object.Settings.Node
+Image=Object.Appearance.Brush
 Widget=
 Visual=
-BoarController_C="Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" 
-REINST_BoarController_C_862="Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" 
+BoarController_C=
+REINST_BoarController_C_862=Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
