--- a/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Spook_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -5,6 +5,7 @@ bAlwaysGatherBehaviorTreeDebuggerData=False
 bMonitorEditorPerformance=True
 bSCSEditorShowFloor=False
 MaterialQualityLevel=1
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 GameGetsMouseControl=False
@@ -50,13 +51,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,LpvLightingOnly=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,ForceGBuffer=0,VisualizeSenses=1,VisualizeBloom=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,LpvLightingOnly=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,ForceGBuffer=0,VisualizeSenses=1,VisualizeBloom=0",BufferVisualizationMode=,ExposureSettings=(LogOffset=999,bFixed=False),FOVAngle=90.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=))
 
 [MRU]
-MRUItem0=C:/Source Tree/Spook/Spook_Prototype/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem1=C:/Users/jackson.luff/Desktop/Spook_Prototype/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem2=C:/Users/jackson.luff/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem3=C:/Users/jackson.luff/Desktop/Spook_Prototype_ALPHA/Spook_Prototype_ALPHA/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem4=C:/Source Tree/Spook_Prototype/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem5=C:/Users/jackson.luff/Documents/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
-MRUItem6=C:/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem0=C:/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem1=C:/Source Tree/Spook/Spook_Prototype/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem2=C:/Users/jackson.luff/Desktop/Spook_Prototype/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem3=C:/Users/jackson.luff/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem4=C:/Users/jackson.luff/Desktop/Spook_Prototype_ALPHA/Spook_Prototype_ALPHA/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem5=C:/Source Tree/Spook_Prototype/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
+MRUItem6=C:/Users/jackson.luff/Documents/SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
 MRUItem7=C:/Source Tree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode/Spook_World.umap
 MRUItem8=C:/Source Tree/Spook/Spook_Prototype 4.8/Content/Spook/MapAndGameMode/Spook_World.umap
 
@@ -93,7 +94,7 @@ NormalImportMethod=FBXNIM_ComputeNormals
 bInvertNormalMaps=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Spook/Characters/Boar
+ContentBrowserTab1.SelectedPaths=/Game/Spook/Characters
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -2182,9 +2183,32 @@ REINST_BoarController_C_850.Tags=True
 REINST_BoarController_C_850.Activation=True
 REINST_BoarController_C_850.Variable=True
 Pickup_C.TransformCommon=True
+KingController_C.Default=True
+KingController_C.Tick=True
+KingController_C.Character=True
+KingController_C.Camera=True
+KingController_C.Pawn=True
+KingController_C.Rendering=True
+KingController_C.Replication=True
+KingController_C.Input=True
+KingController_C.Actor=True
+KingController_C.Variable=True
+KingController_C.TransformCommon=True
+KingController_C.Sockets=True
+KingController_C.Animation=True
+KingController_C.Mesh=True
+KingController_C.Materials=True
+KingController_C.Clothing=True
+KingController_C.Physics=True
+KingController_C.Collision=True
+KingController_C.Lighting=True
+KingController_C.Tags=True
+KingController_C.Activation=True
+KingController_C.Events=True
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Spook/MapAndGameMode/Spook_World.Spook_World:PersistentLevel.Spook_World
 
 [/Script/UnrealEd.FbxAnimSequenceImportData]
 bImportCustomAttribute=True
@@ -2326,6 +2350,9 @@ BoarController_C.Character Movement (General Settings)=False
 /Game/Nelson/Blueprints/pMat_Boar.pMat_Boar=0
 /Game/Spook/HUD/HUD.HUD=1
 /Game/Spook/MiscObjects/Pickup.Pickup=1
+/Game/Spook/Characters/Sheep/Resource/Animations/Sheep_Model_Run.Sheep_Model_Run=1
+/Game/Spook/Characters/King/Resources/Mat_King.Mat_King=1
+/Game/Spook/Characters/King/KingController.KingController=1
 
 [MaterialEditor]
 LightDir=P=-39.999996 Y=27.499994 R=0.000000
@@ -2354,8 +2381,8 @@ RecentlyPlaced=/Game/FoliageTest/Grass/grass_tuff.grass_tuff;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [RootWindow]
-ScreenPosition=X=2133.000 Y=51.000
-WindowSize=X=1546.000 Y=908.000
+ScreenPosition=X=0.000 Y=0.000
+WindowSize=X=1366.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2369,7 +2396,7 @@ FourPanes2x2.Viewport 1.bIsImmersive=False
 FourPanes2x2.Viewport 1.MaximizedViewportID=1
 
 [Directories2]
-UNR=../../../../../../Source Tree/Spook/Spook_Prototype/Spook_Prototype/Content/Spook/MapAndGameMode
+UNR=../../../../../../SourceTree/Spook/Spook_Prototype/Content/Spook/MapAndGameMode
 BRUSH=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
 FBX=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
 FBXAnim=../../../../../../Source Tree/Spook/Spook_Prototype 4.8/Content/
@@ -2802,7 +2829,7 @@ MaterialBillboardComponent=Object.Elements" "Object.Elements.Elements[0]
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+Brush=
 GeomModifier_Clip=Object.Settings
 GeomModifier_Edit=Object.Settings
 GeomModifier=Object.Settings
